--- a/.github/workflows/parcel.yml
+++ b/.github/workflows/parcel.yml
@@ -16,24 +16,24 @@ concurrency:
   group: 'pages'
 
 jobs:
-  # validate:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #     - name: Setup Node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '16'
-  #     - name: Install dependencies
-  #       run: npm install
-  #     - name: Run code style check
-  #       run: npm run format-check
-  #     - name: Run typecheck
-  #       run: npm run typecheck
+  validate:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - name: Install dependencies
+        run: npm install
+      - name: Run code style check
+        run: npm run format-check
+      # - name: Run typecheck
+      #   run: npm run typecheck
 
   build:
-    # needs: validate
+    needs: validate
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
